[MODINVSTOR-1243] Remove unnecessary collect